--- a/toonz/sources/CMakeLists.txt
+++ b/toonz/sources/CMakeLists.txt
@@ -103,6 +103,7 @@ option(WITH_SYSTEM_LZO "Use the system LZO library instead of 'thirdpary'" ${_in
 option(WITH_SYSTEM_SUPERLU "Use the system SuperLU library instead of 'thirdpary'" ${_init_SYSTEM_SUPERLU})
 option(WITH_CANON "Build with Canon DSLR support - Requires Canon SDK" OFF)
 option(WITH_TRANSLATION "Generate translation projects as well" ON)
+option(WITH_TESTS "Compile & run unit tests" OFF)
 
 # avoid using again
 option_defaults_clear()
@@ -637,4 +638,8 @@ endif()
 
 if(BUILD_ENV_UNIXLIKE AND NOT BUILD_TARGET_WIN)
     add_subdirectory(xdg-data)
+endif()
+
+if(WITH_TESTS)
+    add_subdirectory(../tests ./tests)
 endif()
