--- a/toonz/sources/image/CMakeLists.txt
+++ b/toonz/sources/image/CMakeLists.txt
@@ -13,11 +13,9 @@ set(HEADERS
     psd/tiio_psd.h
     svg/tiio_svg.h
     tzl/tiio_tzl.h
-    tzl/tiio_tzl_common.h
-    tzl/tiio_tzl_level_reader.h
-    tzl/tiio_tzl_image_reader.h
-    tzl/tiio_tzl_level_writer.h
-    tzl/tiio_tzl_image_writer.h
+    tzl/tiio_tzl_structure.h
+    tzl/tiio_tzl_reader.h
+    tzl/tiio_tzl_writer.h
     ../include/tnzimage.h
     mov/tiio_mov_proxy.h
     3gp/tiio_3gp_proxy.h
@@ -45,10 +43,8 @@ set(SOURCES
     png/tiio_png.cpp
     psd/tiio_psd.cpp
     svg/tiio_svg.cpp
-        tzl/tiio_tzl_level_reader.cpp
-    tzl/tiio_tzl_image_reader.cpp
-    tzl/tiio_tzl_level_writer.cpp
-    tzl/tiio_tzl_image_writer.cpp
+    tzl/tiio_tzl_writer.cpp
+    tzl/tiio_tzl_reader.cpp
     mov/tiio_mov_proxy.cpp
     3gp/tiio_3gp_proxy.cpp
     ffmpeg/tiio_gif.cpp
